--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,11 +5,16 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Burgers to the Moon!</title>
-	<script src="/assets/js/cats.js"></script>
+	
 </head>
 
 <body>
 	{{{ body }}}
+	<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <script src="/assets/burger.js"></script>
 </body>
 
 </html>
