--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,18 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/burger_style.css" type="text/css" />
+	<script src="assets/js/burger.js"></script>
 	<title>Burgers to the Moon!</title>
 	
 </head>
 
 <body>
-	{{{ body }}}
-	<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-  <script src="/assets/burger.js"></script>
+		{{{ body }}}
 </body>
 
 </html>
