--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
         
         </textarea>
     </div>
-    <div class="row">
+    <div class="row d-flex">
         <button type="submit">Submit</button>
     </div>
     <div class="row justify-content-center">
