changes to page layout

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,6 +2,6 @@
 <div class="burgerBlock">
 	<p class="nameText">{{name}}</p> 
 		<button class="change-good" data-id="{{id}}" data-newgood="{{good}}">
-		{{#if good}}No Thank You{{else}}It's Great{{/if}}
+		{{#if good}}It's Great{{else}}No Thank You{{/if}}
 		</button>
 </div>
