--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,25 +4,30 @@
 	</div>
 	<h1 class="row justify-content-center">Burgers to the Moon!</h1>
 
-<h2>Burgers I hate</h2>
+<div class="row">
+  <div class="col-lg-6">
+    <h2>Burgers I hate</h2>
+    <ul>
+      {{#each burgers}}
+      {{#unless good}}
+      {{> burgers/burger-block good=true}}
+      {{/unless}}
+      {{/each}}
+    </ul>
+  </div>
+  
+  <div class="col-lg-6">
+    <h2>Yummy Burgers</h2>
+    <ul>
+      {{#each burgers}}
+      {{#if good}}
+      {{> burgers/burger-block good=false}}
+      {{/if}}
+      {{/each}}
+    </ul>
+  </div>
+</div>
 
-<ul>
-  {{#each burgers}}
-  {{#unless good}}
-  {{> burgers/burger-block good=true}}
-  {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Yummy Burgers</h2>
-
-<ul>
-  {{#each burgers}}
-  {{#if good}}
-  {{> burgers/burger-block good=false}}
-  {{/if}}
-  {{/each}}
-</ul>
 
 <form id="create-form" class="justify-content-center">
     <div class="row col lg-2 form-group">
