--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,10 +36,10 @@
         
         </textarea>
     </div>
-    <div class="row d-flex">
+    <div class="btn d-flex justify-content-center">
         <button type="submit">Submit</button>
     </div>
-    <div class="row justify-content-center">
+    <div class="d-flex justify-content-center">
         <p>Enter a burger that makes you all happy on the inside.  Then hit the button</p>
     </div>
 </form>
