--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 	<h1 class="row justify-content-center">Burgers to the Moon!</h1>
 
 <div class="row">
-  <div class="col-lg-6">
+  <div class="col-lg-6 c">
     <h2>Burgers I hate</h2>
     <ul>
       {{#each burgers}}
@@ -16,7 +16,7 @@
     </ul>
   </div>
   
-  <div class="col-lg-6">
+  <div class="col-lg-6 c">
     <h2>Yummy Burgers</h2>
     <ul>
       {{#each burgers}}
@@ -29,19 +29,23 @@
 </div>
 
 
-<form id="create-form" class="justify-content-center">
-    <div class="row col lg-2 form-group">
-        <label for="ca"></label>
-        <textarea type="text" id="bu" name="name" rows="4" cols="40">
-        
-        </textarea>
+  <form id="create-form">
+
+    <div class="form-group d">
+      <label for="bu">Enter a Burger:</label>
+      <input type="text" id="bu" name="name">
     </div>
-    <div class="btn d-flex justify-content-center">
-        <button type="submit">Submit</button>
+
+    <div class="form-group d">
+      <label for="slee">Yummy?</label><br>
+      <input type="radio" name="good" value="1" checked id="good"> Super Yummy<br>
+      <input type="radio" name="good" value="0" id="notGood"> No way
     </div>
-    <div class="d-flex justify-content-center">
-        <p>Enter a burger that makes you all happy on the inside.  Then hit the button</p>
+    <div class="text-center">
+      <button class="" type="submit">Add a new burger</button>
     </div>
-</form>
+  </form>
+
+
 
 </div>
